--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -73,8 +73,6 @@ Module-specific instructions for the front page.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tma[12 November 2014]{01}[Covers units A and B]
 
-
-
 \question[(essay question)]{25}
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
@@ -149,7 +147,7 @@ Choose an inline option from three columns.
 \item yes
 \end{inlineoptions}
 
-\question
+\question*
 Choose an inline option at 1.5 spacing.
 \begin{inlineoptions}[1.5]{3} %optional parameter specifies line spacing
 \item yes
