--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -71,13 +71,15 @@ Module-specific instructions for the front page.
 % \end{inlineoptions}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\tma[12 November 2014]{01}[Covers units A and B]
+\tma*[12 November 2014]{01}[Covers units A and B]
+Preamble text, if desired.
 
 \question[(essay question)]{25}
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
 \item hello\marks 4
-\item goodbye running a long time until it goes over to a second line perhaps
+\item goodbye running a long time until it goes over to a second line perhaps about now.
+\[ a^2 + b^2 = c^2.\]
 \item 
 \begin{enumerate}
 \item Sub sub\marks 2
@@ -89,7 +91,7 @@ Module-specific instructions for the front page.
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
 \item Marks can also be called using \mk 4
-\item goodbye running a long time until it goes over to a second line perhaps
+\item goodbye running a long time until it goes over to a second line perhaps, about now:
 \item 
 \begin{enumerate}
 \item Sub sub\mk 2
@@ -201,5 +203,6 @@ Another starred question, this time with no optional argument.
 
 % Assignment with cutoff but no subtitle
 \cma*[an hour ago]{42}
+
 \end{document}
 
