--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -80,7 +80,7 @@ Preamble text, if desired.
 \item hello\marks 4
 \item goodbye running a long time until it goes over to a second line perhaps about now.
 \[ a^2 + b^2 = c^2.\]
-\item 
+\item Another item
 \begin{enumerate}
 \item Sub sub\marks 2
 \item Sub sub question that runs a long time until it goes over to a second line\marks 2
