--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -9,7 +9,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of STEM}
+\faculty{Faculty of Science, Technology, Engineering and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \abtitle{Title of AB}
