Revert "Template faculty name update"
This reverts commit 8446faa6070a078ca4e5aa22b09dd6995227e104.

--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -9,7 +9,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology, Engineering and Mathematics}
+\faculty{Faculty of STEM}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \abtitle{Title of AB}
