--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology, Engineering and Mathematics}
+\faculty{Faculty of STEM}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \icmayear{2015}
