New faculty name
Default in template files for \faculty now "Faculty of Science,
Technology, Engineering and Mathematics"

--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -10,7 +10,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of STEM}
+\faculty{Faculty of Science, Technology, Engineering and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \tntitle{Title of TN}
@@ -76,8 +76,9 @@
 \end{enumerate}
 \subtotal{4}
 \end{enumerate}
-\textref{Unit A, pages 1--2} % Reference to course material
+\textref{Unit A, pages 1--2}% Reference to course material
 \total[for Question \ref{myqnnum}]{5} % Total marks for a question
+
 
 \begin{longremark}
 You can place longer remarks inside the longremark environment.
