ouexam v1.1: large print version
Options 14pt, 17pt and 20pt can be passed to ouexam for large print
versions. Requires extsizes.sty to work.

Also: \conflation replaced by \session (but \conflation will still work)

--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -3,12 +3,12 @@
 % specimen			For specimen exam papers
 % secondspecimen	For 2nd specimen exam
 % showsolutions		Produces solution booklet
-
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \modulecode{MST124}
-\conflation{C} % Can be omitted if "specimen" or "secondspecimen" options are on
+\session{C} % Can be omitted if "specimen" or "secondspecimen" options are on
 \moduletitle{Title of Module}
 \examcode{MST1241606X} % Generates barcode
 \examtime{10:00\,am -- 1:00\,pm}
