ouexam v1.2: SSEP formatting
- New option specimensolutions, to provide LTS-approved SSEP formatting

--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,9 +1,10 @@
 \documentclass{ouexam} 
 % Available options:
-% specimen			For specimen exam papers
-% secondspecimen	For 2nd specimen exam
-% showsolutions		Produces solution booklet
-%
+%  specimen			For specimen exam papers
+%  secondspecimen	For 2nd specimen exam
+%  showsolutions		Produces solution booklet
+%  specimensolutions SSEP ("specimen,showsolutions" achieves the same)
+% See documentation for other options, usage, etc.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
